# CBApp

./: .CMakeLists.txt  .README.md  .gitignore  2025-05-12_project_structure.txt  2025_04_25_Project_Structure.txt  CMakeLists.txt  File.txt  LICENSE.txt  Makefile  README.md  README.txt  Windows_CMakeCache_BACKUP.txt  readme_alt.md  temp.cpp
assets/.cbapp/assets/.cbapp/debug/: editor-rendering_issue.json  editor_tests_1.json  functional_testing1.json
assets/.cbapp/debug/: editor_tests_1.json  fdtd_testing_v0.json  functional_testing1.json  functional_testing_v0.json
assets/.cbapp/presets/editor/: editor-fdtd_v0.json  editor-fdtd_v0.json.old
assets/.cbapp/presets/editor/legacy/: editor-youtube_demo.json
assets/.cbapp/presets/editor/testing/: editor-bbox_testing.json  editor-carpet.json  editor-default.json  editor-fdtd_v0.json
assets/.cbapp/presets/mimic/: mimic-editor_testing_v0.json
assets/config/: cb_app.ini  cb_app.ini.backup  imgui_style.json  implot_style.json  swap_cb_app.ini
assets/fonts/: .backup.ini  cb_app.ini  imgui_style.json  swap_cb_app.ini
build-mingw/: Makefile
build-win64/: Makefile
cmake/: gen_rc.cmake  project_meta.cmake  utility.cmake  version.hpp.in  version.rc.in  win64-toolchain.cmake
cmake/build_system/: project_meta.cmake  utility.cmake
cmake/system/: build.cmake  cbapp_cmake.cmake  constants.cmake  main.cmake  project_meta.cmake  project_metadata.cmake  utility.cmake
data/user_data/: backup.ini  dupe.ini  may-13-2025.ini  name.ini  new.ini  style_backup.json
docs/CBApp/: readme_alt.md
imgui/: imgui.cpp  imgui_demo.cpp
include/: _config.h  main.h
include/app/: _graph_app.h  _graphing_app.h  _init.h  _my_demo.h  app.h
include/app/c_counter/: _internal.h  _types.h  _utility.h  c_counter.h
include/app/delegators/: _browser.h  _cb_debugger.h  _controlbar.h  _detail_view.h  _menubar.h
include/app/delegators/debug/: cb_debugger.h
include/app/editor_app/: editor_app.h
include/app/graph_app/: _editor.h  fdtd.h  graph_app.h
include/app/menubar/: _menubar.h
include/app/sidebar/: _sidebar.h
include/app/state/: _config.h  _constants.h  _init.h  _settings.h  _state.h  _sub_state.h  _types.h  state.h
include/app/titlebar/: _titlebar.h
include/app/toolbar/: _toolbar.h
include/config/: cbapp_config.h  my_imconfig.h
include/fdtd/: _fdtd_1d.h  _fdtd_impl.h  _objects.h  _types.h  fdtd.h
include/fdtd/engine/: engine.h
include/fdtd/entities/: _boundaries.h  _grid.h  _materials.h  _measurements.h  _sources.h  entities.h
include/utility/: _constants.h  _json.h  _logger.h  _templates.h  _types.h  constants.h  resource_loader.h  templates.h  utility.h
include/utility/pystream/: pystream.h
include/widgets/: _cb_demo.h  _editor.h  _file_dialogue.h  _heatmap.h  _misc.h  _popups.h  widgets.h
include/widgets/editor/: _constants.h  _editor.h  _history.h  _history_commands.h  _icon.h  _objects.h  _overlays.h  _state_and_style.h  _types.h  editor.h
include/widgets/editor/objects/: _internal.h  _path.h  _vertex.h  objects.h
include/widgets/functional_testing/: _types.h  functional_testing.h
libs/cb_lib/include/PCH/: PCH.h
libs/cb_lib/include/main/: driver.h  main.h  utility.h
libs/cb_lib/include/templates/utility/: type_traits.h
libs/cb_lib/tests/: driver.cpp  matrix_driver.cpp  utility.cpp
libs/cblib/include/: cblib.h
libs/cblib/include/PCH/: PCH.h
libs/cblib/include/main/: cblib.h  driver.h  utility.h
libs/cblib/include/templates/containers/: containers.h
libs/cblib/include/templates/imgui_extensions/: _json.h  _types.h  _utility.h  imgui_extensions.h
libs/cblib/include/templates/math/: _bezier.h  _internal.h  (+4 more)
libs/cblib/tests/: driver.cpp  matrix_driver.cpp  utility.cpp
macos/: CMakeLists copy.txt  CMakeLists.txt
other/: CMake_backup.txt  deep_research.txt
other/CBApp.xcodeproj/: project.pbxproj
other/CMakeScripts/: ReRunCMake.make
other/glfw-win64-install/lib/pkgconfig/: glfw3.pc
python/save/: TEMPLATE_HEADER.h  TEMPLATE_IMPL.cpp  canvas.py  file_templater.py
python/test/: MenuBar.cpp  MenuBar.h  MyClass.h  canvas_run.py  main_application.cpp  main_application.h
scripts/other/: setup_cbapp.sh  test_colors.sh
scripts/other/macos/: .setup_cbapp_v0.old.sh  .setup_cbapp_v2.sh.old  dir_tree.sh  setup_cbapp.sh
scripts/other/win/: setup_python_win.ps1
scripts/python/: _FPGA_SAMPLE_DATA.py  counter.py  counter_dummy.py  counter_example.py  echo.py  fpga.py  fpga_stream.py  fpga_stream_v3.py
src/: main.cpp
src/app/: about.cpp  app.cpp  functional_testing.cpp  graph_app.cpp  graphing.cpp  graphing_app.cpp  handler.cpp  init.cpp  interface.cpp  internal.cpp  main_application.cpp  my_demo.cpp  sidebar.cpp  temp.cpp  tests.cpp  tools.cpp  windows.cpp
src/app/c_counter/: c_counter.cpp  init.cpp  interface.cpp  plots.cpp  tools.cpp
src/app/delegators/: browser.cpp  browser_impl.cpp  cb_debugger.cpp  controlbar.cpp  detail_view.cpp  menubar.cpp
src/app/delegators/debug/: cb_debugger.cpp  generic.cpp  unit_testing.cpp
src/app/editor_app/: editor_app.cpp
src/app/graph_app/: build_browser.cpp  build_mode.cpp  editor.cpp  fdtd.cpp  graph_app.cpp  init.cpp  rows.cpp  tools.cpp
src/app/menubar/: menubar.cpp
src/app/sidebar/: sidebar.cpp
src/app/state/: appearance.cpp  settings.cpp  state.cpp
src/app/titlebar/: titlebar.cpp
src/app/toolbar/: toolbar.cpp
src/fdtd/: fdtd.cpp  fdtd_1d.cpp  fdtd_impl.cpp
src/utility/: logger.cpp  plots.cpp  resource_loader.cpp  utility.cpp
src/utility/pystream/: pystream.cpp
src/widgets/: HeatMap.cpp  cb_demo.cpp  editor.cpp  file_dialogue.cpp  widgets.cpp
src/widgets/editor/: browser.cpp  browser_panels.cpp  camera.cpp  common.cpp  editor.cpp  history.cpp  hit_detection.cpp  init.cpp  menus.cpp  overlays.cpp  pen_tool.cpp  render.cpp  resident.cpp  selection.cpp  serialization.cpp  shortcuts.cpp  tools.cpp  utility.cpp
src/widgets/editor/objects/: path.cpp  vertex.cpp
src/widgets/functional_testing/: action.cpp  common.cpp  functional_testing.cpp  interface.cpp
win64/: CMakeLists.txt  version.rc
win64/cmake/: gen_rc.cmake
(+40 files in other folders)
